<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CLOZ</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_date">DateActivity</string>
    <string name="title_activity_tag">TagActivity</string>
    <string name="title_activity_flash">FlashActivity</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="title_activity_contact_list">ContactListActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_useinfo">UseInfoActivity</string>
    <string name="title_activity_suggest">SuggestActivity</string>
    <string name="title_activity_in_app">InAppActivity</string>
    <string name="title_activity_tag_people">TagPeopleActivity</string>
    <string name="title_activity_move_tag">MoveTagActivity</string>
    <string name="text_ok">Ok</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>

    <!-- ************************************************** -->
    <!-- Fonts -->

    <string name="font1">font:font1.ttf</string>
    <string name="font2">font:font2.ttc</string>

    <!-- ************************************************** -->
    <!-- Looks -->

    <string name="look_all">All my Looks</string>
    <string name="look_result">Result</string>
    <string name="look_back_all">All</string>
    <string name="look_edit">Edit</string>
    <string name="look_save">Save</string>
    <string name="look_share">Share</string>
    <string name="look_delete">Delete</string>
    <string name="look_msg_delete_image">Do you want to delete this image?</string>
    <string name="look_msg_delete_look">Do you want to delete this Look?</string>

    <string-array name="look_msg_add_tag">
        <item>Contacts</item>
        <item>Tags</item>
    </string-array>

    <string name="look_msg_delete_tag">Do you want to delete this tag?</string>
    <string name="look_msg_add_tag">What do you want to add?</string>

    <string-array name="look_msg_add_image">
        <item>Camera</item>
        <item>Gallery</item>
    </string-array>

    <string name="look_image_saved">Image saved</string>
    <string name="look_search_look">Finds looks</string>

    <!-- ************************************************** -->
    <!-- Main menu -->

    <string name="mainmenu_menu">Menu</string>
    <string name="mainmenu_search">Search</string>
    <string name="mainmenu_newlook">New Look</string>
    <string name="mainmenu_more">More</string>
    <string name="mainmenu_camera">Camera</string>
    <string name="mainmenu_gallery">Gallery</string>
    <string name="mainmenu_icloud">BackUp</string>
    <string name="mainmenu_inapp">Extras</string>
    <string name="mainmenu_rate">Rate</string>
    <string name="mainmenu_suggest">Suggest</string>
    <string name="mainmenu_useinfo">Use info</string>
    <string name="mainmenu_help">Help</string>

    <!-- ************************************************** -->
    <!-- Help -->

    <string name="help_text1_1">Welcome!</string>
    <string name="help_text1_2">Cloz is made to help you</string>
    <string name="help_text1_3">remember your Looks.</string>
    <string name="help_text1_4">It will tell you what you wore,</string>
    <string name="help_text1_5">when you wore it and with who.</string>
    <string name="help_text2_1">Amazing:</string>
    <string name="help_text2_2">To check whether you are</string>
    <string name="help_text2_3">repeating a Look.</string>
    <string name="help_text2_4">To get inspiration.</string>
    <string name="help_text3_1">How do i start?</string>
    <string name="help_text3_2">Start by saving your first Look by clicking:</string>
    <string name="help_text3_3"></string>
    <string name="help_text3_4">1) Menu</string>
    <string name="help_text3_5">2) New look</string>
    <string name="help_text3_6">3) Follow guided steps</string>
    <string name="help_text4_1">Here to delete the Look</string>
    <string name="help_text4_2">Here to change the date</string>
    <string name="help_text4_3">Here to add an image to the look</string>
    <string name="help_text4_4">Here to delete this image</string>
    <string name="help_text4_5">Here to add a tag</string>
    <string name="help_text4_6">Press a tag to delete it</string>
    <string name="help_text5_1">You can active the option to be able to add up to 4 images per Look.\nUseful to better remember details as shoes, extra clothings and bags.</string>

    <!-- ************************************************** -->
    <!-- Camera -->

    <string name="camera_save">Save</string>
    <string name="camera_guide">Tap camera to take another photo</string>

    <!-- ************************************************** -->
    <!-- Contact -->

    <string name="contact_text1">With whom are you wearing the Look?</string>
    <string name="contact_text2">Search</string>
    <string name="contact_text3">Back</string>
    <string name="contact_text4">Continue</string>
    <string name="contact_noselect">Please select one or more contacts.</string>

    <!-- ************************************************** -->
    <!-- Date -->

    <string name="date_text1">Select the date of the Look.</string>

    <!-- ************************************************** -->
    <!-- Tag -->

    <string name="tag_text1">Write extra tags (event, place…)</string>
    <string name="tag_text2">Finish! :)</string>

    <!-- ************************************************** -->
    <!-- Search -->

    <string name="search_text1">Who are you meeting?</string>
    <string name="search_text2">Find Looks!</string>
    <string name="title_activity_backup">BackupActivity</string>

    <!-- User Info -->
    <string name="useinfo_text1">Info of use</string>
    <string name="close_text">Close</string>
    <string name="look_text">Looks</string>
    <string name="image_text">Images</string>
    <string name="people_text">People</string>
    <string name="query_text">Queries</string>

    <!-- Suggest -->
    <string name="suggest_text">Suggest</string>
    <string name="content_text">We appreciate your suggestions to improve CLOZ. We will listen to you and do our best.</string>
    <string name="send_text">Send a suggestion</string>
    <string name="title_activity_count_down">CountDownActivity</string>

    <!-- ************************************************** -->
    <!-- Count down -->
    <string name="count_text1">¡GREAT!</string>
    <string name="count_text2">Your look has been saved.</string>
    <string name="count_text3">Searching!</string>

    <!-- ************************************************** -->
    <!-- In app -->
    <string name="inapp_text1">EXTRAS</string>
    <string name="inapp_text2">We do our best to make a great free app for everyone but we need to offer some extra premium features to at least try to cover our costs. This will help us to keep improving.</string>
    <string name="inapp_text3">Zoom + up to 4 images/Look</string>
    <string name="inapp_text4">Delete pub</string>
    <string name="inapp_text5">Restore</string>
    <string name="inapp_text6">Close</string>

    <string-array name="facebook_array">
        <item>User Profile</item>
        <item>Post Message</item>
        <item>Friends</item>
        <item>Get Feeds</item>
        <item>Upload Image</item>
        <item>Get Albums</item>
        <item>Update Story</item>
        <item>Close Dialog</item>
    </string-array>
    <string-array name="twitter_array">
        <item>User Profile</item>
        <item>Send Tweet</item>
        <item>Friends</item>
        <item>Get Feeds</item>
        <item>Upload Image</item>
        <item>Get Albums</item>
        <item>Close Dialog</item>
    </string-array>
    <string-array name="linkedin_array">
        <item>User Profile</item>
        <item>Post an Update</item>
        <item>Friends</item>
        <item>Get Feeds</item>
        <item>Career</item>
        <item>Close Dialog</item>
    </string-array>
    <string-array name="myspace_array">
        <item>User Profile</item>
        <item>Post an Update</item>
        <item>Friends</item>
        <item>Close Dialog</item>
    </string-array>
    <string-array name="yahoo_array">
        <item>User Profile</item>
        <item>Post an Update</item>
        <item>Friends</item>
        <item>Close Dialog</item>
    </string-array>
    <string-array name="yammer_array">
        <item>User Profile</item>
        <item>Post an Update</item>
        <item>Contacts</item>
        <item>Close Dialog</item>
    </string-array>
    <string-array name="googleplus_array">
        <item>User Profile</item>
        <item>Friends</item>
        <item>Get Feeds</item>
        <item>Get Albums</item>
        <item>Close Dialog</item>
    </string-array>
    <string-array name="google_array">
        <item>User Profile</item>
        <item>Friends</item>
        <item>Close Dialog</item>
    </string-array>
    <string-array name="foursquare_array">
        <item>User Profile</item>
        <item>Contacts</item>
        <item>Close Dialog</item>
    </string-array>
    <string-array name="flickr_array">
        <item>User Profile</item>
        <item>Contacts</item>
        <item>Close Dialog</item>
    </string-array>
    <string-array name="instagram_array">
        <item>User Profile</item>
        <item>Contacts</item>
        <item>Get Feeds</item>
        <item>Close Dialog</item>
    </string-array>
    <string-array name="salesforce_array">
        <item>User Profile</item>
        <item>Close Dialog</item>
    </string-array>
    <string-array name="runkeeper_array">
        <item>User Profile</item>
        <item>Close Dialog</item>
    </string-array>
    <string-array name="drawable_array">
        <item>share</item>
        <item>profile</item>
        <item>contacts</item>
        <item>feeds</item>
        <item>image</item>
        <item>albums</item>
        <item>notepad</item>
        <item>close</item>
    </string-array>

    <!-- ************************************************** -->
    <!-- Tag people -->

    <string name="tagpeople_text1">Which tags do you want toappear in the picture?</string>
    <string name="tagpeople_text2">Continue</string>
    <string name="tagpeople_text3">Date</string>

    <!-- ************************************************** -->
    <!-- Move Tag -->

    <string name="movetag_text1">Move tags</string>
    <string name="movetag_text2">Select where you want to</string>
    <string name="movetag_text3">Save image to camera roll</string>
    <string name="title_activity_help">HelpActivity</string>
    
    <!-- ************************************************** -->
    <!-- Help -->
    
    <string name="helpsetting_text1">HELP</string>
    <string name="helpsetting_text2">Show help screens:</string>
    <string name="helpsetting_text3">See welcome slide</string>

</resources>
