<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/help1"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/font1"
        android:text="@string/help_text1_1"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/font1"
        android:text="@string/help_text1_2"
        android:textColor="#ffffff"
        android:textSize="20sp" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/font1"
        android:text="@string/help_text1_3"
        android:textColor="#ffffff"
        android:textSize="20sp" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/font1"
        android:text="@string/help_text1_4"
        android:textColor="#ffffff"
        android:textSize="20sp" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/font1"
        android:text="@string/help_text1_5"
        android:textColor="#ffffff"
        android:textSize="20sp" />

</LinearLayout>
