<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ContactListActivity" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#FFF704" >

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:text="@string/contact_text3"
            android:textColor="#808080" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/btnBack"
            android:gravity="center"
            android:text="@string/search_text1"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="#FFF704"
        android:text="@string/search_text2"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/edtSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout1"
        android:ems="10"
        android:hint="@string/contact_text2"
        android:imeOptions="actionSearch" >

    </EditText>

    <ListView
        android:id="@+id/lst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnContinue"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/edtSearch" >

    </ListView>

</RelativeLayout>