<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ContactListActivity" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="#3891FF" >

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:text="@string/contact_text3"
            android:textColor="#808080" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/btnBack"
            android:contentDescription="@string/font1"
            android:gravity="center"
            android:text="@string/tag_text1"
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

    </RelativeLayout>

    <EditText
        android:id="@+id/edtTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:singleLine="true"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_above="@+id/edtTag"
        android:background="#3891FF"
        android:contentDescription="@string/font1"
        android:text="@string/tag_text2"
        android:textColor="#FFFFFF" />

    <ListView
        android:id="@+id/lstTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnContinue"
        android:layout_below="@+id/relativeLayout1" >

    </ListView>

</RelativeLayout>